force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <nameField>
        <displayFormat>SV-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>