force-app/main/default/objects/Survey__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>if(Count_Questions__c &gt; 0, if( Count_Questions__c = Count_of_Valid_Question__c,true,false),false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>