force-app/main/default/objects/Survey__c/fields/Count_of_Valid_Question__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Valid_Question__c</fullName>
    <label>Count of Valid Question</label>
    <summarizedField>Question__c.IsHasOptions__c</summarizedField>
    <summaryForeignKey>Question__c.Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>