force-app/main/default/objects/Survey__c/fields/Count_Questions__c.field-meta.xml
<CustomField>
    <fullName>Count_Questions__c</fullName>
    <label>Count Questions</label>
    <summaryForeignKey>Question__c.Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>